[gd_scene load_steps=3 format=3 uid="uid://sbkqulnwaelb"]

[ext_resource type="Script" path="res://Scenes/UI/Research/ResearchUI.gd" id="1_s420v"]
[ext_resource type="Texture2D" uid="uid://c72ylf32g1qud" path="res://Sprites/Interface/research/background.png" id="2_aog0g"]

[node name="ResearchUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s420v")

[node name="PanelContainer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_top = 261.0
offset_right = 240.0
offset_bottom = 616.0
grow_horizontal = 2
color = Color(0.368627, 0.262745, 0.152941, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 240.0
offset_bottom = 355.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Titre" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Current search"

[node name="CurrentSearchLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "toto"

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 261.0
offset_right = 1152.0
offset_bottom = 616.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 903.0
offset_bottom = 360.0

[node name="Control" type="Control" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(816, 447)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Panel/ScrollContainer/Control"]
position = Vector2(407, 222)
texture = ExtResource("2_aog0g")

[node name="researchItem" type="Control" parent="Panel/ScrollContainer"]
custom_minimum_size = Vector2(816, 447)
layout_mode = 2

[node name="ToolTip" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="ToolTip"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Name" type="Label" parent="ToolTip/MarginContainer"]
layout_mode = 2
text = "zerze
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
